support Java21 String Template when preparing